syntax = "proto3";
package dashboard;
option go_package = "stackv2/go/proto/dashboard";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service Dashboard {
  // Projects
  rpc CreateProject(CreateProjectRequest) returns (Project) {
    option (google.api.http) = {
      post : "/v1/projects"
      body : "*"
    };
  }

  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse) {
    option (google.api.http) = {
      get : "/v1/projects"
    };
  }

  rpc GetProject(GetProjectRequest) returns (Project) {
    option (google.api.http) = {
      get : "/v1/projects/{id}"
    };
  }

  rpc DeleteProject(DeleteProjectRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete : "/v1/projects/{id}"
    };
  }

  // Environments
  rpc CreateEnvironment(CreateEnvironmentRequest) returns (Environment) {
    option (google.api.http) = {
      post : "/v1/projects/{project_id}/environments"
      body : "*"
    };
  }

  rpc ListEnvironments(ListEnvironmentsRequest)
      returns (ListEnvironmentsResponse) {
    option (google.api.http) = {
      get : "/v1/projects/{project_id}/environments"
    };
  }

  rpc GetEnvironment(GetEnvironmentRequest) returns (Environment) {
    option (google.api.http) = {
      get : "/v1/projects/{project_id}/environments/{id}"
    };
  }

  rpc DeleteEnvironment(DeleteEnvironmentRequest)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete : "/v1/projects/{project_id}/environments/{id}"
    };
  }

  // Flags
  rpc CreateFlag(CreateFlagRequest) returns (Flag) {
    option (google.api.http) = {
      post : "/v1/projects/{project_id}/flags"
      body : "*"
    };
  }

  rpc ListFlags(ListFlagsRequest) returns (ListFlagsResponse) {
    option (google.api.http) = {
      get : "/v1/projects/{project_id}/flags"
    };
  }

  rpc GetFlag(GetFlagRequest) returns (Flag) {
    option (google.api.http) = {
      get : "/v1/projects/{project_id}/flags/{id}"
    };
  }

  rpc DeleteFlag(DeleteFlagRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete : "/v1/projects/{project_id}/flags/{id}"
    };
  }
}

message CreateProjectRequest { string name = 1; }

message Project {
  string name = 1;
  string id = 2;
}

message ListProjectsRequest {}

message ListProjectsResponse { repeated Project projects = 1; }

message GetProjectRequest { string id = 1; }

message DeleteProjectRequest { string id = 1; }

message CreateEnvironmentRequest {
  string project_id = 1;
  string name = 2;
}

message Environment {
  string name = 1;
  string id = 2;
}

message ListEnvironmentsRequest { string project_id = 1; }

message ListEnvironmentsResponse { repeated Environment environments = 1; }

message GetEnvironmentRequest {
  string project_id = 1;
  string id = 2;
}

message DeleteEnvironmentRequest {
  string project_id = 1;
  string id = 2;
}

message CreateFlagRequest {
  string project_id = 1;
  string name = 2;
}

message Flag {
  string name = 1;
  string id = 2;
}

message ListFlagsRequest { string project_id = 1; }

message ListFlagsResponse { repeated Flag flags = 1; }

message GetFlagRequest {
  string project_id = 1;
  string id = 2;
}

message DeleteFlagRequest {
  string project_id = 1;
  string id = 2;
}